# brain_nets

./: .gitignore  README.md
build-cpp_brains-Desktop-Debug/: Makefile  cpp_brains
cpp_brains/: .gitignore  CMakeLists.txt  activation.cpp  activation.h  biasneuron.cpp  biasneuron.h  connection.cpp  connection.h  cpp_brains.pro  globals.h  hiddenneuron.cpp  hiddenneuron.h  identity.cpp  identity.h  inputneuron.cpp  inputneuron.h  main.cpp  neuralnet.cpp  neuralnet.h  neuron.cpp  neuron.h  outputneuron.cpp  outputneuron.h  run.sh  sigmoid.cpp  sigmoid.h  workingneuron.cpp  workingneuron.h
java_brain/: pom.xml
kotlin_brians/: pom.xml
py_brains/: .gitignore
py_brains/src/: activation.py  bias_neuron.py  connection.py  input_neuron.py  main.py  networkx_graphs.py  neural_net.py  neuron.py  output_neuron.py  staging.py  working_neuron.py
py_brains/test/: and.py  iris.py  or.py  xor.py
sharp_brain/: SharpBrain.sln
sharp_brain/SharpBrainTests/: Data.cs  NeuralNetTests.cs  SharpBrainTests.csproj
sharp_brain/sharp_brain/: Program.cs
sharp_brain/sharp_brain/Activations/: Activation.cs  ActivationStrategy.cs  Identity.cs  Sigmoid.cs
sharp_brain/sharp_brain/Neural/: Connection.cs  HiddenNeuron.cs  InputNeuron.cs  (+5 more)
swift_brains/swift_brains/: Activation.swift  BiasNeuron.swift  Connection.swift  HiddenNeuron.swift  InputNeuron.swift  NeuralNet.swift  Neuron.swift  OutputNeuron.swift  Sigmoid.swift  WorkingNeuron.swift  main.swift
swift_brains/swift_brains.xcodeproj/: project.pbxproj
swift_brains/swift_brains_tests/: AndTests.swift  OrTests.swift  XorTests.swift
(+32 files in other folders)
